# HackRx

HackRx-6.0/HackRx-6.0-main/: LICENSE  README.md  pyproject.toml  requirements.txt  run.py
HackRx-6.0/HackRx-6.0-main/app/: main.py
HackRx-6.0/HackRx-6.0-main/app/api/: __init__.py  hackrx.py
HackRx-6.0/HackRx-6.0-main/app/core/: __init__.py  settings.py
HackRx-6.0/HackRx-6.0-main/app/db/: mongo.py
HackRx-6.0/HackRx-6.0-main/app/kg/: chunker.py  example.md  graph_builder.py  graph_utils.py  graphiti.py.py  providers.py  super-basic-lightrag.py
HackRx-6.0/HackRx-6.0-main/app/services/: agent.py  chunker.py  rag.py  round_robin.py  vector_store_service.py
HackRx-6.0/HackRx-6.0-main/app/utils/: __init__.py  auth.py  extract_text.py  file_handling.py  hash.py  prompts.py  supabase.sql  temp.json
